--- a/Major-Projects/Vercel/package.json
+++ b/Major-Projects/Vercel/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "aws-sdk": "^2.1554.0",
     "cors": "^2.8.5",
