--- a/Major-Projects/medium-blog/frontend/package.json
+++ b/Major-Projects/medium-blog/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gautam28dec/medium-common": "^1.0.0",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
