--- a/Week-15/week-15-live-1/Dockerfile
+++ b/Week-15/week-15-live-1/Dockerfile
@@ -2,11 +2,14 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY . .
+COPY package* .
+COPY ./prisma .
 
 RUN npm install
 RUN npm run build
 RUN npx prisma generate
+
+COPY . .
 
 EXPOSE 3000
 
