--- a/Week-16/week-16-2/apps/backend/package.json
+++ b/Week-16/week-16-2/apps/backend/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build" : "tsc -b",
-    "dev" : "tsc -b && node dist/index.js"
+    "build": "tsc -b",
+    "dev": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "esbuild": "^0.20.2",
     "express": "^4.19.1"
   }
 }
