--- a/Week-16/week-16-2/packages/common/tsconfig.json
+++ b/Week-16/week-16-2/packages/common/tsconfig.json
@@ -1,8 +1,3 @@
 {
-    "extends": "@repo/typescript-config/base.json",
-    "compilerOptions": {
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "module": "NodeNext"
-    }
+    "extends": "@repo/typescript-config/base.json"
 }
