--- a/Week-16/week-16-2/apps/backend/package.json
+++ b/Week-16/week-16-2/apps/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -b",
+    "build": "npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
     "dev": "tsc -b && node dist/index.js"
   },
   "keywords": [],
