--- a/Week-16/week-16-part-1/apps/backend/package.json
+++ b/Week-16/week-16-part-1/apps/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "tsc -b",
+    "build" : "esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
     "dev" : "tsc -b && node dist/index.js"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@types/express": "^4.17.21",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "@repo/common": "*"
   }
 }
