--- a/Major-Projects/CashIT/apps/user-app/package.json
+++ b/Major-Projects/CashIT/apps/user-app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@repo/db": "*",
+    "@repo/store": "*",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522"
